= Changelog

This changelog contains major and/or breaking changes to Kakoune between
released versions.

== Kakoune 2025.06.03

* Expose env vars that are mentioned in the arguments passed to shell expansions

* Support for colored double underlines

* `git apply` can now operate on selected changes in the current buffer's
  file (useful for quick (un)staging and reverting)

* `exec/eval -client` switch accepts '*' for all clients and comma separated
  list of client names.

== Kakoune 2024.05.18

* Fixed tests on Alpine Linux and *BSD

== Kakoune 2024.05.09

* `flag-lines -after` switch to display text after the line

* `shell-script-candidates` completion now runs the script asynchronously
  while displaying and updating results live.

* `%val{window_range}` elements are now emitted as different strings

* `+` only duplicates identical selections a single time to avoid surprising
  and slow exponential growth in the number of selections.

* `daemonize-session` command makes it possible to convert the current session
  to a daemon one (which will not exit on last client disconnecting)

* View mode commands and mouse scrolling no longer change selections when those go off-screen.

* New commands `git apply`, `git blame-jump`, `git edit` and `git grep`.

* `git blame` now also works in `git-diff` and `git-log` buffers.

* Completions provided via `shell-script-candidates` or `completers` are no longer sorted if the typed text is empty.

* The `terminal` alias has been replaced with a command that selects terminal program and placement based on windowing options.

* `local` scopes in `commands` and `evaluate-commands`.

== Kakoune 2023.08.08

* Fix compilation errors on FreeBSD and MacOS using clang

== Kakoune 2023.07.29

* `<a-u>` and `<a-U>` now undo/redo selection changes; the previous meaning
  of moving in history tree has been moved to `<c-j>` and `<c-k>`

* `%exp{...}` expansions provide flexible quoting for expanded strings
  (as double quoted strings)
